portal_szkolenie.html

--- a/portal_szkolenie.html
+++ b/portal_szkolenie.html
@@ -494,7 +494,7 @@
             //openedSymbol: '&#8863; &#x1f5c1;',
             //collapseAll: 'Collapse all',
             //expandAll: 'Expand all',
-            collapsed: false,
+            collapsed: true,
         });
         lay.addTo(map);
         setBounds();
